--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1>Hello Word</h1>
+    <p>welcome to programmingg</p>
 
     <script src="script.js" defer></script>
   </body>
