--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <h1>Hello Word</h1>
     <p>welcome to programmingg</p>
+    <h2>Micheal is not focusing again</h2>
 
     <script src="script.js" defer></script>
   </body>
